<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/blue"
        android:padding="10dp"
        android:id="@+id/img_main_body">
        <ImageView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_keyboard_arrow_left_black_24dp"
            />
        <ImageView
            android:id="@+id/upper_body"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/circle">

        </ImageView>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/ic_person_black_24dp"
            >

        </ImageView>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upper_body"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/img_camera"
                android:background="@drawable/camera"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textAlignment="center"
                >

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:paddingLeft="10dp"
                android:text="@string/Upload"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_camera">

            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/outer_const"
        app:layout_constraintTop_toBottomOf="@id/img_main_body"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/first_row"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/et_pass">
            <EditText
                android:layout_margin="10dp"
                android:id="@+id/t_name"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:hint="@string/userName"
                android:paddingStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/border"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintEnd_toStartOf="@id/tv_email"
                />
            <EditText
                android:id="@+id/tv_email"
                app:layout_constraintHorizontal_weight="1"
                android:layout_margin="10dp"
                android:paddingStart="10dp"
                android:layout_width="0dp"
                android:layout_height="40dp"
                app:layout_constraintStart_toEndOf="@id/t_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/Email"
                android:background="@drawable/border"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <EditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/Password"
            android:background="@drawable/border"
            app:layout_constraintTop_toBottomOf="@id/first_row"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingStart="10dp"
            >

        </EditText>
        <EditText
            android:id="@+id/et_conf_pass"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/Confirm_Password"
            android:background="@drawable/border"
            app:layout_constraintTop_toBottomOf="@id/et_pass"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingStart="10dp"
            >

        </EditText>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/const_DOB"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/et_conf_pass"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp">
            <EditText
                android:id="@+id/tv_day"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_month"
                android:hint="@string/day"
                android:padding="10dp"
                android:background="@drawable/border"
                />
            <EditText
                android:layout_marginStart="10dp"
                android:id="@+id/tv_month"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/tv_day"
                app:layout_constraintEnd_toStartOf="@id/tv_year"
                android:hint="@string/month"
                android:padding="10dp"
                android:background="@drawable/border"/>
            <EditText
                android:layout_marginStart="10dp"
                android:id="@+id/tv_year"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/tv_month"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/year"
                android:padding="10dp"
                android:background="@drawable/border"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <Button
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/const_DOB"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:text="@string/button_starting"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:text="@string/link"
            android:textColor="@color/blue"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
